--- a/style.css
+++ b/style.css
@@ -17,12 +17,25 @@ h1 {
 .profile-box {
     margin: 0 20px;
     text-align: center;
+    cursor: pointer;
 }
 
 .profile-box img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
+}
+
+.vote-button {
+    display: block;
+    margin: 30px auto;
+    padding: 15px 30px;
+    font-size: 20px;
+    border: none;
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .login-prompt {
