--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
 .container {
   text-align: center;
   padding: 20px;
+  background-color: #ffafcc;
 }
+
 
 .site-header {
   background-color: purple;
