--- a/styles.css
+++ b/styles.css
@@ -1,97 +1,68 @@
 /* General styles */
-.container {
-  text-align: center;
-  padding: 20px;
-  background-color: #ffafcc;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.site-header {
+.container {
+  text-align: center;
+  padding: 50px;
   background-color: #ffafcc;
-  padding: 10px;
-  border-radius: 8px;
-  margin-bottom: 20px;
+  height: 100vh;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
 .site-name {
-  font-size: 32px;
+  font-size: 48px;
   color: #ffffff;
-  padding: 10px;
-}
-
-.menu-icon {
-  font-size: 24px;
-  color: #ffffff;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.menu-items {
-  display: none;
-}
-
-.menu-items ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu-items ul li {
-  padding: 10px;
-  color: #ffffff;
-  background-color: #ffafcc;
-  cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .site-content {
-  margin-top: 20px;
+  margin-top: 50px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
-  font-size: 28px;
+  font-size: 36px;
   color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .subtitle {
-  margin-bottom: 20px;
+  font-size: 24px;
   color: #ffffff;
+  margin-bottom: 40px;
 }
 
 .profile-box {
-  display: inline-block;
-  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .profile-photo-large {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   object-fit: cover;
 }
 
 .profile-name {
-  display: block;
-  margin-top: 10px;
-  color: #ffffff;
-  font-weight: bold;
+  font-size: 24px;
 }
 
 .vote-button-container {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 button {
-  padding: 15px 30px;
-  font-size: 18px;
-  background-color: #54298a;
-  color: #ffffff;
-  border: none;
+  padding: 20px 40px;
+  font-size: 24px;
   border-radius: 50px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #6f3baf;
 }
