--- a/styles.css
+++ b/styles.css
@@ -48,11 +48,16 @@ body {
   margin-bottom: 20px;
 }
 
-
-
+.profile-photo {
+  width: 120px;
+  height: 120px;
+  border-radius: 8px;
+  object-fit: cover;
+  margin-right: 20px;
+}
 
 .profile-name {
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .vote-button-container {
@@ -60,7 +65,7 @@ body {
 }
 
 button {
-  padding: 20px 40px;
-  font-size: 24px;
-  border-radius: 50px;
+  padding: 16px 32px;
+  font-size: 20px;
+  border-radius: 30px;
 }
