--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,6 @@ body {
 
 .site-content {
   margin-top: 50px;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .title {
@@ -42,8 +37,11 @@ body {
   margin-bottom: 40px;
 }
 
-
-
+.profile-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
 .profile-photo {
   width: 80px;
@@ -64,4 +62,12 @@ button {
   padding: 16px 32px;
   font-size: 20px;
   border-radius: 30px;
+  background-color: #6d3da8;
+  color: #ffffff;
+  border: none;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
 }
