--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
+/* General styles */
 body {
   margin: 0;
   padding: 0;
 }
 
 .container {
+  text-align: center;
+  padding: 50px;
   background-color: #ffafcc;
   height: 100vh;
   display: flex;
@@ -18,17 +21,40 @@ body {
   margin-bottom: 20px;
 }
 
-.profile-box {
+.site-content {
+  margin-top: 50px;
+  flex-grow: 1;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
 }
 
-.profile-photo {
-  width: 10px;
-  height: 10px;
-  border-radius: 10%;
-  margin-right: 10px;
+.title {
+  font-size: 36px;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  font-size: 24px;
+  color: #ffffff;
+  margin-bottom: 40px;
+}
+
+.profile-box {
+  margin-bottom: 20px;
+}
+
+.profile-photo-large {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile-name {
+  font-size: 24px;
 }
 
 .vote-button-container {
@@ -36,15 +62,7 @@ body {
 }
 
 button {
-  padding: 16px 32px;
-  font-size: 20px;
-  border-radius: 30px;
-  background-color: #6d3da8;
-  color: #ffffff;
-  border: none;
-}
-
-a {
-  color: #ffffff;
-  text-decoration: none;
+  padding: 20px 40px;
+  font-size: 24px;
+  border-radius: 50px;
 }
