--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body {
     padding: 0;
 }
 
+body {
+    background-color: #8a2be2;
+}
+
+
 .container {
     text-align: center;
     padding: 50px;
