--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,9 @@ body {
 }
 
 .site-name {
-    font-size: 32px;
-    font-weight: bold;
-    color: #FFFFFF;
-    margin-top: 50px;
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 20px;
 }
 
 .vote-now-phrase {
