--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #FFAFCC;
+    background-color: #8a2be2;
     font-family: Arial, sans-serif;
 }
 
