--- a/styles.css
+++ b/styles.css
@@ -1,78 +1,57 @@
-/* styles.css */
-
 body {
+    background-color: #ffafcc;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #8a2be2;
-    font-family: Arial, sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.site-name {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
     text-align: center;
-    font-size: 48px;
-    margin-bottom: 20px;
 }
 
-.vote-now-phrase {
-    font-size: 24px;
-    color: #FFFFFF;
-    margin-top: 20px;
+.title {
+    font-size: 40px;
+    font-weight: bold;
+    color: #531b93;
+}
+
+.subtitle {
+    font-size: 20px;
+    color: #531b93;
 }
 
 .profile-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
+    margin: 0 20px;
 }
 
-.profile img {
-    width: 160px;
-    height: 160px;
+.profile-img {
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
 }
 
-.profile h2 {
-    font-size: 18px;
-    margin-top: 10px;
-    color: #FFFFFF;
-}
-
-.vote-button-container {
-    margin-top: 30px;
-}
-
 .vote-button {
-    padding: 15px 30px;
-    font-size: 60px;
+    display: block;
+    margin: 40px auto;
+    padding: 10px 20px;
+    font-size: 20px;
     font-weight: bold;
-    color: #FFFFFF;
-    background-color: #8E44AD;
+    color: #fff;
+    background-color: #531b93;
     border: none;
-    border-radius: 20px;
+    border-radius: 50px;
     cursor: pointer;
 }
 
 .vote-button:hover {
-    background-color: #663399;
+    background-color: #ff0066;
 }
-
-.vote-button:focus {
-    outline: none;
-}
-
