--- a/style.css
+++ b/style.css
@@ -35,17 +35,17 @@ body {
   margin-top: 10px;
 }
 
-.facebook-btn {
+.facebookBtn {
   background-color: #1877f2;
   color: #ffffff;
 }
 
-.instagram-btn {
+.instagramBtn {
   background-color: #E1306C;
   color: #ffffff;
 }
 
-.google-btn {
+.googleBtn {
   background-color: #4285F4;
   color: #ffffff;
 }
