--- a/style.css
+++ b/style.css
@@ -35,17 +35,17 @@ body {
   margin-top: 10px;
 }
 
-.facebookBtn {
+.facebookbtn {
   background-color: #1877f2;
   color: #ffffff;
 }
 
-.instagramBtn {
+.instagrambtn {
   background-color: #E1306C;
   color: #ffffff;
 }
 
-.googleBtn {
+.googlebtn {
   background-color: #4285F4;
   color: #ffffff;
 }
